# miniOS

./: .gitignore  CMakeLists.txt  README.md
old/: Makefile
scripts/: boot_qemu.sh
src/: config.h.in  config.hpp  config.hpp.in
src/kernel/: CMakeLists.txt  common.cpp  common.h  common.hpp  cpp_ctor_dtor_impl.cpp  cpp_ctor_dtor_impl.hpp  debug.cpp  debug.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  irq.cpp  irq.hpp  isr.cpp  isr.hpp  keyboard.cpp  keyboard.hpp  kheap.cpp  kheap.hpp  kmalloc.cpp  kmalloc.hpp  main.cpp  monitor.cpp  monitor.h  monitor.hpp  paging.cpp  paging.hpp  start.cpp  start.hpp  task.cpp  task.hpp  timer.cpp  timer.hpp
src/kernel/arch/i386/: flags.cmake  irq.s  isa_specific_code.cpp  isa_specific_code.hpp  isa_specific_code.s  isr.s  start.s  task.s
src/kernel/arch/i386/pc/: boot.asm  flags.cmake  link.ld  plataform_specific_code.hpp
src/kernel/boot/: multiboot.hpp
src/kernel/compiler/gcc/: compiler_specific_code.hpp  flags.cmake  icxxabi.cpp  icxxabi.hpp  local_static_vars.hpp  new.cpp  new.hpp  pure_virtual_functions.cpp
src/kernel/compiler/gcc/quad/: adddi3.c  fixunssfdi.c  muldi3.c  qdivrem.c  quad.h
src/kernel/compiler/vcc/: compiler_specific_code.cpp  compiler_specific_code.hpp  pure_virtual_functions.cpp
src/kernel/fs/: fs.cpp  fs.hpp  initrd.cpp  initrd.hpp
src/kernel/i386/: flags.cmake
src/kernel/i386/pc/: boot.asm  flags.cmake
src/kernel/kpp/: bitset.hpp  node.hpp  ordered_array.cpp  ordered_array.hpp  queue.hpp  snprintf.cpp  snprintf.hpp  utils.hpp  vsnprintf.cpp  vsnprintf.hpp
src/libc/: CMakeLists.txt
src/libc/NewLib/: build.sh  flags.cmake  get.sh
src/libc/PDClib/: build.sh  flags.cmake  get.sh
tools/: boot_qemu.sh
utils/: boot_qemu.sh  make_initrd.cpp
